--- a/epic/data-design-erd.html
+++ b/epic/data-design-erd.html
@@ -9,7 +9,7 @@
 		<h1>Entity Relationship Diagram</h1>
 	</div>
 	<div>
-		<img src="diagram.jpg" alt="diagram"/>
+		<img src="diagram1.png" alt="diagram"/>
 	</div>
 </body>
 </html>
